# toolbox-analyze-image

./: README.md  pyproject.toml
apex-weapon-chooser/: colorbase_triggerbot.py  directkey.py  proccesor.py  triggerchoose.py  weapon.py
color-picker/: color-picker.py
color-reseacher/: color-researcher.py
image-toolbox/: README.md  pyproject.toml
image-toolbox/color-picker/: color-picker.py
image-toolbox/color-reseacher/: color-researcher.py
image-toolbox/screen-capture/: capture.py
jitter/: joystickapi.py  main.py
recoil-pattern-analyzer/: _converter.py  _weapon.py  analyzer.py
recoil-pattern-analyzer/Bulldog/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
recoil-pattern-analyzer/Frenzy/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
recoil-pattern-analyzer/Phantom/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
recoil-pattern-analyzer/Spectre/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
recoil-pattern-analyzer/Stinger/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
recoil-pattern-analyzer/Vandal/: angle_diffs.txt  pitch_list.txt  pixel_diffs.txt
screen-capture/: capture.py
spectator/STEP1. check position and color/: spectator.py
spectator/STEP2. Get Number Image/: spectator.py
spector/: spector.py
weapon-detector/: process.py  weapon.py
