[project]
name = "tools"
version = "0.1.0"
description = "convinience tools for valorant bot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keyboard>=0.13.5",
    "pyperclip>=1.9.0",
    "pystray>=0.19.5",
    "pywin32>=307",
    "rich>=13.9.2",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.9",
]
